--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -851,6 +851,10 @@ h6 {
   background: #ffecdf;
 }
 
+.dashboard .admin-card .card-icon {
+  color: #ff1d1d;
+  background: #ffdfdf;
+}
 /* Activity */
 .dashboard .activity {
   font-size: 14px;
